add unordered list

--- a/index.html
+++ b/index.html
@@ -27,5 +27,16 @@
     <li>cut</li>
     <li>serve</li>
 </ol>
+
+<ul>
+    <li>Pepperoni</li>
+    <li>Olives</li>
+    <li>Peppers (never green)</li>
+    <li>Mushrooms</li>
+    <li>Onions</li>
+    <li>Jalapenos</li>
+    <li>Pineapple (only if you are crazy)</li>
+    <li>Bacon</li>
+</ul>
 </body>
 </html>
