--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!--Make Lists Here-->
 <h5> This is how you make a pizza</h5>
-<p>There are some specific steps you need to take to make a pizza, we will list them here.</p>
+<p><small>There are some specific steps you need to take to make a pizza, we will list them here.</small></p>
 
 <ol>
     <li>make the pizza base</li>
@@ -31,11 +31,11 @@
 <ul>
     <li>Pepperoni</li>
     <li>Olives</li>
-    <li>Peppers (never green)</li>
+    <li>Peppers <strong>(never green)</strong></li>
     <li>Mushrooms</li>
     <li>Onions</li>
     <li>Jalapenos</li>
-    <li>Pineapple (only if you are crazy)</li>
+    <li>Pineapple <em>(only if you are crazy)</em></li>
     <li>Bacon</li>
 </ul>
 </body>
