add external website link

--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
     <li>Pineapple <em>(only if you are crazy)</em></li>
     <li>Bacon</li>
 </ul>
+<p>Here is the <a href="http://en.wikipedia.org/wiki/Pizza" target="_blank">Wikipedia article about pizza.</a></p>
+
 </body>
 </html>
