--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
 </ul>
 <p>Here is the <a href="http://en.wikipedia.org/wiki/Pizza" target="_blank">Wikipedia article about pizza.</a></p>
 
+<img src="images/pizza.jpg" alt="a picture of pizza">
+
 </body>
 </html>
