add li class fave

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 </ol>
 
 <ul>
-    <li>Pepperoni</li>
+    <li class="fave">Pepperoni</li>
     <li>Olives</li>
-    <li>Peppers <strong>(never green)</strong></li>
+    <li class="fave">Peppers <strong>(never green)</strong></li>
     <li>Mushrooms</li>
     <li>Onions</li>
-    <li>Jalapenos</li>
+    <li class="fave">Jalapenos</li>
     <li>Pineapple <em>(only if you are crazy)</em></li>
     <li>Bacon</li>
 </ul>
