--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 </ul>
 <p>Here is the <a href="http://en.wikipedia.org/wiki/Pizza" target="_blank">Wikipedia article about pizza.</a></p>
 
-<img src="images/pizza.jpg" alt="a picture of pizza">
+<img class="pizza" src="images/pizza.jpg" alt="a picture of pizza">
 
+<h2>But wait, there's something I like even more than pizza. <a href="cake.html" target="_blank">Its cake.</a></h2>
 </body>
 </html>
